# rinha-backend-actix-rust-2024

./: Cargo.toml  Dockerfile  README.md  client.http  docker-compose.yml
src/: endpoints.rs  main.rs  persistence.rs
